Bug 487309 - Panel pop-ups pushed away from their panel by second thicker panel
Summary: Panel pop-ups pushed away from their panel by second thicker panel
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-21 07:53 UTC by Thorolf E.R. Weißhuhn
Modified: 2025-02-08 03:33 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
screenshot (105.96 KB, image/png)
2024-05-21 07:53 UTC, Thorolf E.R. Weißhuhn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thorolf E.R. Weißhuhn 2024-05-21 07:53:08 UTC
Created attachment 169672 [details]
screenshot

SUMMARY
If a second panel on the same edge exists, and it is wider, a pop-up from the slimmer panel is impossible to have adjacent to the clicked widget. It always, unnecessarily, honors the width of the wider panel. This is a small encumbrance, but during a workday the extra mousing (and the additional required precision of the movement) becomes annoying.

For a use case, see image. The wide window list is always visible, the slim panel auto-hides; it is used far less frequently.

STEPS TO REPRODUCE
1. Place two vertical Panels on the same screen edge, one markedly wider than the other,
2. Add widgets that open pop-ups in the slimmer panel,
3. Click one of the widgets.

OBSERVED RESULT
The pop-up's location is not adjacent to the clicked widget, but follows the width of the wider panel.

EXPECTED RESULT
Pop-up as close to widget click as possible without covering its panel.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20240517
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.0
Kernel Version: 6.8.9-1-default (64-bit)
Graphics Platform: X11


POSSIBLY RELATED
https://bugs.kde.org/show_bug.cgi?id=252576
https://bugs.kde.org/show_bug.cgi?id=464201
https://bugs.kde.org/show_bug.cgi?id=481533
Comment 1 Nate Graham 2024-05-22 20:07:35 UTC
Cannot reproduce on Wayland. Of course Wayland currently suffers from Bug 477939 which impairs this use case in a worse way.
Comment 2 Bug Janitor Service 2025-02-04 16:51:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5159
Comment 3 Bug Janitor Service 2025-02-04 16:53:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7108
Comment 4 Niccolò Venerandi 2025-02-05 18:06:28 UTC
Git commit cb73a963c08017402b9a59724455fcb722dba9c9 by Niccolò Venerandi.
Committed on 05/02/2025 at 18:05.
Pushed by niccolove into branch 'master'.

Activate any tray applet popup when shown

This mimicks the same code of the CompactApplet in
Plasma Desktop, and it avoids system tray elements
not having focus when opened in certain situations.

M  +1    -0    applets/systemtray/package/contents/ui/main.qml

https://invent.kde.org/plasma/plasma-workspace/-/commit/cb73a963c08017402b9a59724455fcb722dba9c9
Comment 5 Vlad Zahorodnii 2025-02-07 09:29:24 UTC
Git commit 8b7d19fdcbdb5f075e3724310242dc51e300632e by Vlad Zahorodnii, on behalf of Niccolò Venerandi.
Committed on 07/02/2025 at 09:18.
Pushed by vladz into branch 'master'.

Consider AppletPopups to be SpecialWindows

This allows AppletPopups to be drawn in exclusive areas,
which is required in X11 when having multiple panels on the
same side of different thicknesses.

M  +1    -1    src/window.cpp

https://invent.kde.org/plasma/kwin/-/commit/8b7d19fdcbdb5f075e3724310242dc51e300632e