Consider AppletPopups to be SpecialWindows

This allows AppletPopups to be drawn in exclusive areas,
which is required in X11 when having multiple panels on the
same side of different thicknesses.

BUG:487309